tests/reference/run-scalar_allocation_check_02-b6aed2a.stderr
runtime error: Tried to access member of unallocated variable 'var'
  --> tests/errors/scalar_allocation_check_02.f90:14:22
   |
14 |             print *, var%x
   |                      ^^^^^ 'var' unallocated here
